/*
 * This Source Code Form is subject to the terms of the Mozilla Public
 * License, v. 2.0. If a copy of the MPL was not distributed with this
 * file, You can obtain one at https://mozilla.org/MPL/2.0/.
 *
 * Copyright (c) 2023-present, Ukama Inc.
 */

syntax = "proto3";

option go_package = "github.com/ukama/ukama/systems/registry/site/pb/gen";

import "validator.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";


package ukama.registry.site.v1;

service SiteService {
    rpc Add(AddRequest) returns (AddResponse);
    rpc Get(GetRequest) returns (GetResponse);
    rpc GetSites(GetSitesRequest) returns (GetSitesResponse);
}


message AddRequest{
    string name = 2;
    string networkId = 3 [(validator.field) = { uuid_ver: 4, string_not_empty: true }, json_name = "network_id"];
    string backhaulId = 4 [(validator.field) = { uuid_ver: 4, string_not_empty: true }, json_name = "backhaul_id"];
    string powerId = 5 [(validator.field) = { uuid_ver: 4, string_not_empty: true }, json_name = "power_id"];
    string accessId = 6 [(validator.field) = { uuid_ver: 4, string_not_empty: true }, json_name = "access_id"];
    string switchId = 7 [(validator.field) = { uuid_ver: 4, string_not_empty: true }, json_name = "switch_id"];
    bool isDeactivated = 8 [json_name = "is_deactivated"];
    double latitude = 9;
    double longitude = 10;
    google.protobuf.Timestamp installDate = 11 [json_name = "install_date"];
}

message AddResponse{
    Site site = 1;
}

message GetRequest{
    string networkId = 1 [(validator.field) = {uuid_ver: 4, string_not_empty: true}, json_name = "network_id"];
    string siteId = 2 [(validator.field) = {uuid_ver: 4, string_not_empty: true}, json_name = "site_id"];

}

message GetResponse{
    Site site = 1;
}

message GetSitesRequest{
    string networkId = 1 [(validator.field) = {uuid_ver: 4, string_not_empty: true}, json_name = "network_id"];
}


message GetSitesResponse{
    repeated Site sites = 2;
}

message Site {
    string id = 1 [(validator.field) = { uuid_ver: 4, string_not_empty: true }];
    string name = 2;
    string networkId = 3 [(validator.field) = { uuid_ver: 4, string_not_empty: true }, json_name = "network_id"];
    string backhaulId = 4 [(validator.field) = { uuid_ver: 4, string_not_empty: true }, json_name = "backhaul_id"];
    string powerId = 5 [(validator.field) = { uuid_ver: 4, string_not_empty: true }, json_name = "power_id"];
    string accessId = 6 [(validator.field) = { uuid_ver: 4, string_not_empty: true }, json_name = "access_id"];
    string switchId = 7 [(validator.field) = { uuid_ver: 4, string_not_empty: true }, json_name = "switch_id"];
    bool isDeactivated = 8 [json_name = "is_deactivated"];
    double latitude = 9;
    double longitude = 10;
    google.protobuf.Timestamp installDate = 11 [json_name = "install_date"];
}